--- a/crates/wedge_lib/Cargo.toml
+++ b/crates/wedge_lib/Cargo.toml
@@ -10,14 +10,14 @@ publish = false
 [dependencies]
 # For install
 win-user-pref = { git = "https://github.com/MarcGuiselin/win-user-pref" }
-widestring = "0.4.0"
-winreg = "0.7.0"
-winapi = { version = "0.3.8", features = [
-    "winuser", "libloaderapi", "commctrl", "shlobj", "shellapi", "combaseapi", "objbase", "unknwnbase", "winnt", "shtypes"] }
+widestring = "1.0"
+winreg = "0.10"
+winapi = { version = "0.3.9", features = [
+    "winuser", "libloaderapi", "commctrl", "shlobj", "shellapi", "combaseapi", "objbase", "unknwnbase", "winnt", "shtypes", "fileapi"] }
 
 # For build
-handlebars = "3.0"
+handlebars = "4.3"
 serde_json = "1.0"
-embed-resource = "1.3"
-fs_extra = "1.1"
-cargo_metadata = "0.9"
+embed-resource = "1.7"
+fs_extra = "1.2"
+cargo_metadata = "0.15"
