--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,8 +1,7 @@
 unstable_features = true
 
-merge_imports = true
+imports_granularity = "Crate"
 reorder_impl_items = true
-newline_style = "Unix"
 fn_single_line = true
 blank_lines_upper_bound = 3
 format_macro_matchers = true
