--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-# Tried a few different toolchains, and so far 1.59.0 gets the least av false positives. See: https://github.com/MarcGuiselin/wedge/issues/1
-channel = "1.59.0"
+# Roll back to a very old toolchain. See: https://github.com/MarcGuiselin/wedge/issues/1
+channel = "1.39.0"
